_sass/main.scss
html, html[data-theme="light"] {
    --bg: #FFFFFF;
    --text: #000000;
    --accent: #999999;
    --link: #7777FF;
}
html[data-theme="dark"] {
    --bg: #080F10;
    --text: #FFFFFF;
    --accent: #AAAAAA;
    --link: #7777FF;
}

@media (prefers-color-scheme: dark){
    html, html[data-theme="dark"] {
        --bg: #080F10;
        --text: #FFFFFF;
        --accent: #AAAAAA;
        --link: #7777FF;
    }
    html[data-theme="light"] {
        --bg: #FFFFFF;
        --text: #000000;
        --accent: #999999;
        --link: #7777FF;
    }
}

@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');

body {
    font-family: 'Noto Sans', sans-serif;
    font-weight: 300;

    color: var(--text);
    background-color: var(--bg);

    margin: 0;
    min-height: 100vh;
}

main {
    display: flex;
    flex-direction: column;
    align-items: center;
}

h1 {
    font-size: 3em;
    font-weight: 200;
    margin: 0;
    text-align: center;
}

p {
    font-size: 1.2rem;
    max-width: 70ch;

    strong {
        font-weight: 800;
    }
}

.gray {
    font-size: 2em;
    color: var(--accent);
    margin: 0;
}

.languages {
    display: flex;
    gap: 1em;

    .flag {
        height: 2.5em;
    }
}

hr {
    width: 90vw;
    max-width: 25em;
}

.main-text {
    font-size: 1.2em;
    text-align: center;
}

.link {
    text-decoration: none;
    color: var(--accent);

    position: relative;

    &::before {
        content: '';
        background-color: var(--link);
        position: absolute;
        left: 0;
        bottom: 0;
        width: 100%;
        height: 0.1rem;
        z-index: -1;
        transition: height 0.3s ease-out, background 1s ease-in-out;
    }
    &:hover {
        color: var(--text);

        &::before {
            height: 50%;
            background-color: var(--link);
        }
    }
}

.mode-switcher {
    display: grid;
    cursor: pointer;
    margin-top: 2rem;
    margin-bottom: 3rem;
}

.sun, .moon {
    grid-column: 1;
    grid-row: 1;
    height: 4rem;
    width: 4rem;
}

